syntax = "proto3";
package broadcast;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum OP {
  UNKNOWN = 0;
  ACK_BROADCAST = 1;
  BROADCAST = 2;
  GET_BLOCKS = 3;
  GET_ROUNDS = 4;
  LIST_BLOCKS = 5;
}

message AckBroadcast { uint64 last = 1; }

message Block {
  uint64 node = 1;
  SignedData previous = 2;
  repeated SignedData references = 3;
  uint64 round = 4;
  Transactions transactions = 5;
}

message BlockReference {
  bytes hash = 1;
  uint64 node = 2;
  uint64 round = 3;
}

message GetBlocks { repeated BlockReference blocks = 1; }

message GetRounds { repeated uint64 rounds = 1; }

message ListBlocks { repeated SignedData blocks = 1; }

// The data of a SignedData may either be an encoded Block or BlockReference.
message SignedData {
  bytes data = 1;
  bytes signature = 2;
}

message Transactions {
  uint64 count = 1;
  bytes data = 2;
}
